--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,23 +6,25 @@ http {
   default_type  application/octet-stream;
   sendfile on;
 
-  # Upstreams till Kubernetes services
+  
   upstream product_api  { server product-service:8000; }
   upstream customer_api { server customer-service:8000; }
 
   server {
     listen 80;
 
-    # Statiska filer (frontend)
+    
     root /usr/share/nginx/html;
     index index.html;
 
-    # SPA fallback (om du har multipla html-sidor kan du ta bort detta)
-    location / {
-      try_files $uri $uri/ /index.html;
+    
+    location ~* \.(html|css|js|png|jpg|jpeg|gif|ico|svg)$ {
+      try_files $uri =404;
+      expires 1h;
+      add_header Cache-Control "public, immutable";
     }
 
-    # ---- Produktendpoints ----
+    
     location /getProducts {
       proxy_pass http://product_api/getProducts;
       proxy_set_header Host $host;
@@ -35,7 +37,7 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
     }
 
-    # ---- Kundendpoints ----
+    
     location /login {
       proxy_pass http://customer_api/login;
       proxy_set_header Host $host;
@@ -46,6 +48,11 @@ http {
       proxy_pass http://customer_api/addAccount;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    
+    location / {
+      try_files $uri $uri/ /index.html;
     }
   }
 }
