--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,58 +1,31 @@
-worker_processes 1;
-events { worker_connections 1024; }
+events { }
 
 http {
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
   sendfile on;
 
-  
-  upstream product_api  { server product-service:8000; }
-  upstream customer_api { server customer-service:8000; }
-
   server {
     listen 80;
-
-    
     root /usr/share/nginx/html;
     index index.html;
 
-    
-    location ~* \.(html|css|js|png|jpg|jpeg|gif|ico|svg)$ {
-      try_files $uri =404;
-      expires 1h;
-      add_header Cache-Control "public, immutable";
+    #Route the fetches to the corret place
+    location = /getProducts {
+      proxy_pass http://product-service:8000/getProducts;
     }
 
-    
-    location /getProducts {
-      proxy_pass http://product_api/getProducts;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
+    location = /addProduct {
+      proxy_pass http://product-service:8000/addProduct;
     }
 
-    location /addProduct {
-      proxy_pass http://product_api/addProduct;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
+    #Route the fetches to the correct place
+    location = /login {
+      proxy_pass http://customer-service:8000/login;
     }
 
-    
-    location /login {
-      proxy_pass http://customer_api/login;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    location /addAccount {
-      proxy_pass http://customer_api/addAccount;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    
-    location / {
-      try_files $uri $uri/ /index.html;
+    location = /addAccount {
+      proxy_pass http://customer-service:8000/addAccount;
     }
   }
 }
