--- a/k8/customer-db.yaml
+++ b/k8/customer-db.yaml
@@ -19,17 +19,20 @@ spec:
         ports:
         - containerPort: 3306
         env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: "password"
-        - name: MYSQL_DATABASE
-          value: "customerdb"
-        - name: MYSQL_USER
-          value: "test"
-        - name: MYSQL_PASSWORD
-          value: "pass"
-        volumeMounts:
-        - name: customer-db-storage
-          mountPath: /var/lib/mysql
+          - name: DB_HOST
+            value: "customer-db"
+          - name: DB_USER
+            valueFrom:
+              secretKeyRef:   
+                name: customer-secret
+                key: DB_USER
+          - name: DB_PASSWORD
+            valueFrom:        
+              secretKeyRef:
+                name: customer-secret
+                key: DB_PASSWORD
+          - name: DB_NAME
+            value: "customerdb"
   volumeClaimTemplates:
   - metadata:
       name: customer-db-storage
@@ -50,4 +53,4 @@ spec:
   ports:
     - port: 3306
       targetPort: 3306
-  clusterIP: None   # headless service krävs för StatefulSet
+  clusterIP: None   
