added comments and removes page "cart"

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,7 @@
+#Frontend based on alpine
 FROM nginx:alpine
 
+#Copy all the files to the specified location
 COPY . /usr/share/nginx/html
-
+#need to overwrite the nginx.conf, since i implement custom reverse proxy. 
 COPY nginx.conf /etc/nginx/nginx.conf
