Updates to create a table in the database

--- a/k8/adminer.yaml
+++ b/k8/adminer.yaml
@@ -29,5 +29,5 @@ spec:
   selector:
     app: adminer
   ports:
-    - port: 8080
-      nodePort: 30002
+    - port: 8080 #Internal port
+      nodePort: 30002 #Exposed port.
